deactivate 6.0.2 tests because of spring wsd issue